--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,10 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+# General
+puppet/.vagrant/
+
+# Log files (if you are creating logs in debug mode, uncomment this)
+# *.log
