--- a/puppet/Vagrantfile
+++ b/puppet/Vagrantfile
@@ -12,4 +12,10 @@ Vagrant.configure("2") do |config|
     v.cpus = CPUS
   end
 
+  config.vm.provision :shell, privileged: false, run: "always", inline: %(
+    cd /vagrant/
+    bundle exec unicorn_rails -D
+    sudo service nginx restart
+  )
+
 end
